version/stable/_sources/api/ansys/mechanical/stubs/v252/Ansys/ACT/Automation/Mechanical/FE/CDB/CommandElementSurfaceLoad.rst.txt
.. vale off



:class:`CommandElementSurfaceLoad`
==================================

.. py:class:: ansys.mechanical.stubs.v252.Ansys.ACT.Automation.Mechanical.FE.CDB.CommandElementSurfaceLoad(iElementSurfaceLoad: Ansys.Common.Interop.FEParsePlugin_ANSYS.IElementSurfaceLoad)

   Bases: :py:obj:`object`


   
   Represents an element surface load associated to a SFEBLOCK command.
















   ..
       !! processed by numpydoc !!


.. py:currentmodule:: CommandElementSurfaceLoad

Overview
--------

.. tab-set::



   .. tab-item:: Methods

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~Equals`
            - Equals method.
          * - :py:attr:`~GetHashCode`
            - GetHashCode method.
          * - :py:attr:`~GetType`
            - GetType method.
          * - :py:attr:`~ToString`
            - ToString method.


   .. tab-item:: Properties

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~Count`
            - Gets the number of element surface loads.
          * - :py:attr:`~Elem`
            - Gets the element number.
          * - :py:attr:`~ElementSurfaceLoadValues`
            - Gets the values.
          * - :py:attr:`~Keys`
            - Gets the keys.
          * - :py:attr:`~LKeys`
            - Gets the load keys.







Property detail
---------------
.. py:property:: Count
   :type: Optional[int]


   
   Gets the number of element surface loads.
















   ..
       !! processed by numpydoc !!

.. py:property:: Elem
   :type: Optional[int]


   
   Gets the element number.
















   ..
       !! processed by numpydoc !!

.. py:property:: ElementSurfaceLoadValues
   :type: Optional[tuple[Ansys.ACT.Automation.Mechanical.FE.CDB.CommandElementSurfaceLoadValues]]


   
   Gets the values.
















   ..
       !! processed by numpydoc !!

.. py:property:: Keys
   :type: Optional[tuple[int]]


   
   Gets the keys.
















   ..
       !! processed by numpydoc !!

.. py:property:: LKeys
   :type: Optional[tuple[int]]


   
   Gets the load keys.
















   ..
       !! processed by numpydoc !!





Method detail
-------------
.. py:method:: Equals(obj: Any) -> bool

   
   Equals method.

   ..
       !! processed by numpydoc !!

.. py:method:: GetHashCode() -> int

   
   GetHashCode method.

   ..
       !! processed by numpydoc !!

.. py:method:: GetType() -> type

   
   GetType method.

   ..
       !! processed by numpydoc !!

.. py:method:: ToString() -> str

   
   ToString method.

   ..
       !! processed by numpydoc !!



.. vale on